<resources>
    <string name="app_name">ArkanoidLite</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_infinite_mode">Infinite Mode</string>
    <string name="btn_level">Level</string>
    <string name="btn_sound">Sound</string>
    <string name="btn_back">Back</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_infinite_game">Infinite Mode</string>
    <string name="btn_level_game">Muestra el nivel de juego</string>
    <string name="btn_next">Next level</string>
</resources>