<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity"
    android:orientation="vertical"
    android:background="#E1F5FE"
    android:gravity="center">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="onActionModoInfinito"
        android:drawableStart="@drawable/play"
        android:background="@drawable/buttonshape"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_infinite_mode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/check"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_start_game" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="14sp"
            android:paddingStart="45dp"
            android:paddingEnd="25dp"
            android:textColor="@color/black"
            android:text="@string/btn_infinite_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="onActionDificultad"
        android:background="@drawable/buttonshape"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_level"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/hud_1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="45dp"
            android:paddingEnd="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_settings" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="14sp"
            android:paddingStart="45dp"
            android:paddingEnd="25dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/btn_level" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="onActionSound"
        android:background="@drawable/buttonshape"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_sound"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/audio_on"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_sound" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="14sp"
            android:paddingStart="45dp"
            android:paddingEnd="25dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/btn_sound" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="onActionBack"
        android:background="@drawable/buttonshape"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/restart"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="14sp"
            android:paddingStart="45dp"
            android:paddingEnd="25dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/btn_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>