<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart"
            android:onClick="restart"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/btn_back"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit"
            android:onClick="exit"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/btn_exit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivNewHighest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_highest"
            android:visibility="gone"></ImageView>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Points: "
                    android:textSize="24sp"></TextView>
                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textSize="50sp"
                    android:textColor="@android:color/holo_green_dark"></TextView>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest: "
                    android:textSize="24sp"
                    android:layout_gravity="center|right"></TextView>
                <TextView
                    android:id="@+id/tvHighest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="50sp"
                    android:textColor="@android:color/holo_orange_dark"></TextView>
            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/btn_next_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/play"
            android:onClick="nextLevel"
            android:visibility="gone"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/btn_next"/>
        <View
            android:layout_width="1dp"
            android:layout_height="80dp" />
    </LinearLayout>

</LinearLayout>